--- a/maxonts/src/screens/newIn/newIn.html
+++ b/maxonts/src/screens/newIn/newIn.html
@@ -43,7 +43,7 @@
                 <input type="text" input.delegate="updateData(item,1)" class="form-control"
                   id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
               </label>
-              <label for="exampleFormControlInput2" class="form-label"># Parte
+              <label for="exampleFormControlInput2" class="form-label">No. Parte
 
                 <input disabled type="text" class="form-control" id="exampleFormControlInput2"
                   value.bind="$parent.consumibles[item]['idParte']">
@@ -72,7 +72,7 @@
                 <input type="text" class="form-control" value.bind="$parent.tools[item]['idHerramienta']">
 
               </label>
-              <label for="exampleFormControlInput2" class="form-label"># Parte
+              <label for="exampleFormControlInput2" class="form-label">No. Parte
 
                 <input type="text" disabled class="form-control" id="exampleFormControlInput2"
                   value.bind="$parent.tools[item]['idParte']">
