--- a/maxonts/src/screens/In-Out/inOut.html
+++ b/maxonts/src/screens/In-Out/inOut.html
@@ -84,7 +84,7 @@
 
                   <input type="text" input.delegate="updateData(item,1)" class="form-control" id="exampleFormControlInput1" value.bind="$parent.consumibles[item]['idConsumible']">
                 </label>
-                <label for="exampleFormControlInput2" class="form-label"># Parte
+                <label for="exampleFormControlInput2" class="form-label">No. Parte
 
                   <input disabled type="text" class="form-control" id="exampleFormControlInput2" value.bind="$parent.consumibles[item]['idParte']">
                    
@@ -108,7 +108,7 @@
                   <input type="text" if.bind="type" input.delegate="updateData(item,0)"  class="form-control" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
                   <input type="text"  if.bind="!type" class="form-control" id="exampleFormControlInput1" value.bind="$parent.tools[item]['idHerramienta']">
                 </label>
-                <label for="exampleFormControlInput2" class="form-label"># Parte 
+                <label for="exampleFormControlInput2" class="form-label">No. Parte 
                   
                   <input type="text" disabled.bind="type" class="form-control" id="exampleFormControlInput2" value.bind="$parent.tools[item]['idParte']">
                 </label>
