--- a/maxonts/src/screens/inventory/inventory.html
+++ b/maxonts/src/screens/inventory/inventory.html
@@ -12,14 +12,14 @@
         <label>Tipo</label>
         <select value.bind="query.Tipo" class="form-control">
           <option selected model.bind="null">Seleccionar</option>
-          <option repeat.for="type of types" value=${type}>${capitalize(type)}</option>
+          <option repeat.for="type of types" model.bind="type">${capitalize(type)}</option>
         </select>
       </div>
       <div>
         <label>Familia</label>
         <select value.bind="query.Familia" class="form-control">
           <option selected model.bind='undefined'>Seleccionar</option>
-          <option repeat.for="family of families" model.bind='family'>${capitalize(family)}</option>
+          <option repeat.for="family of families" model.bind='family.Familia'>${capitalize(family.Familia)}</option>
         </select>
       </div>
       <div>
@@ -46,13 +46,14 @@
   <h2> Resultados </h2>
   <div class="pagination">
  <a class="left" click.trigger="previous()">❮</a>
+ <span>Página ${page +1 } de ${maxPage}</span>
   <a class="right" click.trigger="next()">❯</a>
 </div>
   <table class="table table-hover">
  
     <thead>
       <tr>
-        <th scope="col"># Parte</th>
+        <th scope="col">No Parte</th>
         <th scope="col">Tipo</th>
         <th scope="col">Familia</th>
         <th scope="col">Nombre</th>
