--- a/maxonts/src/screens/loan_history/history.html
+++ b/maxonts/src/screens/loan_history/history.html
@@ -4,7 +4,7 @@
     <!-- START SEARCH FILTERES -->
     <div class="mb-3 filters search">
       <div>
-        <label for="loan_info_employee" class="form-label label"> # De Empleado </label>
+        <label for="loan_info_employee" class="form-label label"> No. Empleado </label>
         <input value.bind="query.idEmpleado" type="text" class="form-control" id="loan_info_employee">
       </div>
       <div>
@@ -15,7 +15,7 @@
         </select>
       </div>
       <div>
-        <label for="loan_info_idParte" class="form-label label"> # Parte </label>
+        <label for="loan_info_idParte" class="form-label label"> No. Parte </label>
         <input value.bind="query.idParte" type="text" class="form-control" id="loan_info_idParte">
       </div>
       <div>
@@ -52,13 +52,14 @@
   <h2> Resultados </h2>
   <div class="pagination">
    <a class="left" click.trigger="previous()">❮</a>
+   <span>Página ${page +1} de ${maxPage}</span>
     <a class="right" click.trigger="next()">❯</a>
   </div>
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col"># Prestamo</th>
-        <th scope="col"># Empleado</th>
+        <th scope="col">No. Empleado</th>
+        <th scope="col">No. Empleado</th>
         <th scope="col">Area</th>
         <th scope="col">Status</th>
         <th scope="col">Presto</th>
