--- a/maxonts/src/screens/outs_register/outs.html
+++ b/maxonts/src/screens/outs_register/outs.html
@@ -17,6 +17,11 @@
   </div>
   <h1>${titulo}</h1>
   <h3>Herramientas</h3>
+  <div class="pagination">
+    <a class= 'left' click.delegate="pagination(0,0)">❮</a>
+    <span>Página ${actualPagetools +1 } de ${maxPagetools}</span>
+    <a class='right'  click.delegate="pagination(0,1)">❯</a>
+  </div>
   <table class="table table-hover">
     <thead>
       <tr>
@@ -41,12 +46,13 @@
       </tr>
     </tbody>
   </table>
-  <p>Next/Previous buttons:</p>
-  <div class="pagination">
-    <a class= 'left' click.delegate="pagination(0,0)">❮</a>
-    <a class='right' disbled.bind='maxPageConsumibles==actualPageConsumibles' click.delegate="pagination(0,1)">❯</a>
-  </div>
+ 
   <h3>Consumibles</h3>
+  <div class="pagination">
+    <a class='left' click.trigger="pagination(1,0)">❮</a>
+    <span>Página ${actualPageConsumibles +1} de ${maxPageConsumibles}</span>
+    <a  class= 'right' click.trigger="pagination(1,1)">❯</a>
+  </div>
   <table class="table table-hover">
     <thead>
       <tr>
@@ -73,9 +79,6 @@
       </tr>
     </tbody>
   </table>
-  <p>Next/Previous buttons:</p>
-  <div class="pagination">
-    <a class='left' click.trigger="pagination(1,0)">❮</a>
-    <a  class= 'right' click.trigger="pagination(1,1)">❯</a>
-  </div>
+
+  
 </template>
