--- a/maxonts/src/screens/returns/returns.html
+++ b/maxonts/src/screens/returns/returns.html
@@ -1,11 +1,11 @@
 <template>
-  <h2> Información de Prestamo </h2>
+  <h2> Prestamos Activos </h2>
 
 
   <!-- START SEARCH FILTERES -->
   <div class="mb-3 search filters">
     <div>
-      <label for="loan_info_employee" class="form-label label"> # De Empleado </label>
+      <label for="loan_info_employee" class="form-label label"> No. Empleado </label>
       <input value.bind="query.idEmpleado" type="text" class="form-control" id="loan_info_employee">
     </div>
     <div>
@@ -44,13 +44,14 @@
   <h2> Resultados </h2>
   <div class="pagination">
    <a class="left" click.trigger="previous()">❮</a>
+   <span>Página ${page + 1} de ${maxPage}</span>
     <a class="right" click.trigger="next()">❯</a>
   </div>
   <table class="table table-hover">
     <thead>
       <tr>
-        <th scope="col"># Prestamo</th>
-        <th scope="col"># Empleado</th>
+        <th scope="col">No. Empleado</th>
+        <th scope="col">No. Empleado</th>
         <th scope="col">Area</th>
         <th scope="col">Status</th>
         <th scope="col">Presto</th>
