--- a/maxonts/src/screens/up_downs/up_downs.html
+++ b/maxonts/src/screens/up_downs/up_downs.html
@@ -12,7 +12,7 @@
       <Button class=" btn btn-dark" click.delegate="addUp()">Añadir +</Button>
       <div repeat.for="i of ups.length">
         <div class="mb-3 filters search">
-          <label class="form-label"># Parte
+          <label class="form-label">No. Parte
             <input type="text" value.bind="ups[i]['idParte']" class="form-control">
           </label>
 
@@ -66,7 +66,7 @@
       <div repeat.for="i of down.length">
 
         <div class="mb-3 filters search">
-          <label class="form-label"># Parte
+          <label class="form-label">No. Parte
             <input input.trigger="matchData(i)" type="text" value.bind="down[i]['idParte']" class="form-control">
           </label>
           <label>Nombre
